@@ -34,11 +34,11 @@ public class MQConcurrentListener implements MessageListenerConcurrently {
             System.out.println("接受到的消息为空，不处理，直接返回成功");
             return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
         }
-        MessageExt messageExt = list.get(0);
+        MessageExt messageExt = list.getFirst();
         // TODO 判断该消息是否重复消费（RocketMQ不保证消息不重复，如果你的业务需要保证严格的不重复消息，需要你自己在业务端去重）
         // TODO 获取该消息重试次数
         int reconsume = messageExt.getReconsumeTimes();
-        if(reconsume == 3){ // 消息已经重试了3次，需做告警处理，以及相关日志
+        if(reconsume == 3) { // 消息已经重试了3次，需做告警处理，以及相关日志
             return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
         }
         // TODO 处理对应的业务逻辑
@@ -74,7 +74,7 @@ public class MQConcurrentListener implements MessageListenerConcurrently {
         if (mqMsgHandler == null) {
             return ConsumeConcurrentlyStatus.RECONSUME_LATER;
         }
-        ConsumeConcurrentlyStatus status = mqMsgHandler.handle(tags,messageExt);
+        ConsumeConcurrentlyStatus status = mqMsgHandler.handle(tags, messageExt);
         // 如果没有return success,consumer会重新消费该消息，直到return success
         return status;
     }
